--- a/Jerry & Kartal.ipynb
+++ b/Jerry & Kartal.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download github en jupyter notebook kartal!!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
